--- a/styles.css
+++ b/styles.css
@@ -41,14 +41,14 @@ body {
 
 h1 {
   color: white;
-  font-size: 3.5rem;
+  font-size: 2.9rem;
   line-height: 1.1;
   margin-bottom: 1.5rem;
 }
 
 p {
   color: white;
-  font-size: 1.05rem;
+  font-size: 15px;
   opacity: 90%;
 }
 
@@ -56,6 +56,7 @@ h4 {
   background-color: var(--blue);
   color: white;
   text-align: center;
+  font-size: 0.9rem;
   padding: 1rem 0;
   border-radius: 1rem;
   box-shadow: 0 15px 15px rgba(0, 0, 0, 0.35);
@@ -130,7 +131,20 @@ button {
   cursor: pointer;
 }
 
-small {
+.terms {
+  margin-top: 10px;
+  font-size: 12px;
+  color: var(--grayish-blue);
+  text-align: center;
+}
+
+.terms a {
+  color: var(--red);
+  text-decoration: none;
+  font-weight: 600;
+}
+
+/* small {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -142,9 +156,7 @@ small span {
   color: var(--red);
   font-weight: 600;
   cursor: pointer;
-}
-
-
+} */
 
 @media (max-width: 768px) {
   .container {
@@ -186,7 +198,7 @@ small span {
   }
 
   h4 {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 
   input,
@@ -198,7 +210,7 @@ small span {
     font-size: 0.875rem;
   }
 
-  small {
+  /* small {
     font-size: 0.75rem;
-  }
+  } */
 }
